[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dualcam-replay"
version = "0.1.0"
description = "Sistema desktop de vídeo replay com duas câmeras, buffer JPEG em disco e exportação."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Seu Nome", email = "seu@email.com" }
]
dependencies = [
  "PySide6>=6.5",
  "opencv-python>=4.8",
  "numpy>=1.26"
]

[project.scripts]
dualcam-replay = "replay.main:main"

[tool.setuptools]
packages = ["replay"]
